Add function update information's store